--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
-  json_serializable: ^3.5.1
-  provider: ^4.0.5
+  http: ^0.13.5
+  json_serializable: ^6.6.1
+  json_annotation: ^4.8.0
+  provider: ^6.0.5
 
   #  json_annotation: ^4.8.0
 #  json_serializable: ^6.6.1
@@ -34,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
