Add share functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_serializable: ^6.6.1
   json_annotation: ^4.8.0
   provider: ^6.0.5
+  whatsapp_share: ^2.0.1
 
   #  json_annotation: ^4.8.0
 #  json_serializable: ^6.6.1
