--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,21 +27,19 @@ dependencies:
   json_serializable: ^6.6.1
   json_annotation: ^4.8.0
   provider: ^6.0.5
-  whatsapp_share: ^2.0.1
-
-  #  json_annotation: ^4.8.0
-#  json_serializable: ^6.6.1
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   path_provider: ^2.0.14
+  share_plus: ^6.3.1
+  whatsapp_share2: ^2.0.2
+  flutter_bloc: ^8.1.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
+  freezed: ^2.3.2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
